# django-app

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/management/commands/: create_blog_data.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html  author_detail.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_alter_profile_options_and_more.py
mysite/myauth/templates/myauth/: about-me.html  login.html  logout_confirm.html  profile_update.html  register.html  user-details.html  users-list.html
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  utils.py  views.py
mysite/shopapp/fixtures/: orders-fixtures.json  products-fixtures.json  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/shopapp/management/commands/: aggregate_annotate_operation.py  aggregate_decimal_operations.py  bulk_add_products.py  bulk_update_products.py  create_order.py  create_products.py  create_token.py  init_db.py  selecting_fields.py  update_order.py
mysite/shopapp/migrations/: 0001_initial.py
(+17 files in other folders)
